# bosca

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile-administration  Dockerfile-administration-query-installer  Dockerfile-analytics  Dockerfile-blog-installer  Dockerfile-dc  Dockerfile-front  Dockerfile-migrations  Dockerfile-runner  Dockerfile-server  LICENSE.md  README.md  analytics-example-queries.md  analytics-graphql-integration-plan-v2.md  analytics-implementation-plan.md  analytics-user-behavior-extension-plan.md  docker-compose-macos.yaml  docker-compose.yaml
docs/: c.list  (+12 more)
workspace/analytics/: Cargo.toml  example.http
workspace/analytics/src/: events.rs  events_sink.rs  events_sync.rs  installation.rs  main.rs  query.rs
workspace/analytics/src/transforms/: cloudflare_geo.rs
workspace/analytics/src/writers/: files.rs  mod.rs  multi_sink.rs  worker.rs  writer.rs
workspace/bible/processor/: Cargo.toml  README.md
workspace/bible/processor/src/: bible.rs  book.rs  context.rs  dblmetadata.rs  error.rs  html_context.rs  lib.rs  metadata.rs  singleton.rs  string_context.rs
workspace/bible/processor/testdata/: upload.http
workspace/bible/workflows/: Cargo.toml
workspace/bible/workflows/src/: attrs.rs  collections.rs  create_chapter_verse_table.rs  lib.rs  process_bible.rs  upload_book.rs  upload_chapter.rs  upload_verse.rs  util.rs
workspace/client/: Cargo.toml  schema.json  schema.json.graphql
workspace/client-generator/: Cargo.toml
workspace/client-generator/src/: context.rs  introspection.rs  main.rs  model.rs  parser.rs
workspace/client-generator/src/generators/: rust.rs  typescript.rs
workspace/client/queries/: NextJob.graphql  add_activity.graphql  add_child_collection.graphql  add_child_metadata.graphql  add_collection.graphql  add_metadata.graphql  add_metadata_bulk.graphql  add_metadata_supplementary.graphql  add_search_documents.graphql  begin_transition.graphql  collection.graphql  delete_collection.graphql  delete_metadata.graphql  enqueue_child_workflow.graphql  enqueue_child_workflows.graphql  enqueue_job.graphql  find_collection.graphql  find_metadata.graphql  get_activity_ids.graphql  get_collection_items.graphql  login.graphql  metadata.graphql  metadata_download_url.graphql  metadata_upload_url.graphql  plan.graphql  set_collection_public.graphql  set_collection_public_list.graphql  set_collection_ready.graphql  set_collection_workflow_state_complete.graphql  set_metadata_attributes.graphql  set_metadata_public.graphql  set_metadata_ready.graphql  set_metadata_system_attributes.graphql  set_workflow_job_checkin.graphql  set_workflow_job_complete.graphql  set_workflow_job_context.graphql  set_workflow_state.graphql  set_workflow_state_complete.graphql  source_by_id.graphql  supplementary_download_url.graphql  (+2 more)
workspace/client/src/: client.rs  context.json  download.rs  lib.rs  models.rs  queries.json  upload.rs
workspace/core/dc/: Cargo.toml  README.md  build.rs
workspace/core/dc-client/: Cargo.toml  build.rs
workspace/core/dc-client/src/: client.rs  client_watcher.rs  lib.rs
workspace/core/dc/src/: api.rs  cache.rs  cluster.rs  main.rs  notification.rs
workspace/core/dc/tests/: tests.http
workspace/core/migrations/: Cargo.toml
workspace/core/migrations/migrations/: V11__trait_content_types.sql  V13__documents.sql  V14__guides.sql  V15__profile_bookmarks_ratings.sql  V16__documents_v2.sql  V17__workflow_schedules.sql  V1__initialize.sql  V20__plans.sql  V21__profile_attributes.sql  V22__slug.sql  V23__collection_item_index.sql  V24__refresh_token.sql  V25__prompt_schema.sql  V26__non_null.sql  V27__configurations.sql  V28__source_url.sql  V29__collection_templates.sql  V30__workflow_state_valid.sql  V31__etag.sql  V32__guides.sql  V33__etag_functions.sql  V34__guide_on_delete.sql  V35__public_configurations.sql  V36__content_storage_systems.sql  V36__empty_workflows.sql  V37__collection_supplementary.sql  V38__bible.sql  V39__group_types.sql  V3__security_and_profiles.sql  V40__container_types.sql  V41__collection_template_filters.sql  V42__collection_template_ordering.sql  V43__attribute_location.sql  V44__bible.sql  V45__progress.sql  V46__document_collaboration.sql  V47__password_scrypt.sql  V48__template_constraint.sql  V49__locked.sql  V50__indexes.sql  (+11 more)
workspace/core/migrations/src/: main.rs
workspace/core/server/: Cargo.toml
workspace/core/server/src/: caching_headers.rs  collection_files.rs  context.rs  document_collaboration.rs  files.rs  image_files.rs  logger.rs  main.rs  metadata_files.rs  queries.rs  redis.rs  shutdown_hook.rs  slugs.rs
workspace/core/util/database/: Cargo.toml
workspace/core/util/telemetry/: Cargo.toml
workspace/front/: Cargo.toml
workspace/front/src/: context.rs  handler.rs  main.rs  minify_css.rs  minify_html.rs
workspace/migrations/: Cargo.toml
workspace/migrations/migrations/: V10__workflow.sql  V12__trait_workflows_drop.sql  V14__guides.sql  V15__profile_bookmarks_ratings.sql  V16__documents_v2.sql  V17__workflow_schedules.sql  V18__metadata_profiles.sql  V19__gql_persisted_queries_application.sql  V1__initialize.sql  V20__admin_profile.sql  V21__profile_attributes.sql  V22__slug.sql  V2__job_ids.sql  V4__collection_item_attrs.sql  V9__drop_not_null.sql
workspace/migrations/src/: main.rs
workspace/runner/: Cargo.toml
workspace/runner/src/: main.rs
workspace/server/: Cargo.toml  workflows.yaml
workspace/server/src/: authed_subscription.rs  context.rs  files.rs  main.rs  redis.rs  schema.rs
workspace/server/src/datastores/: configurations.rs  content.rs  content_notifier.rs  mod.rs  notifier.rs  persisted_queries.rs  profile.rs  security.rs  workflow.rs
workspace/server/src/graphql/: mod.rs  mutation.rs  queries.rs  queries_mutation.rs  query.rs  subscription.rs
workspace/server/src/models/: mod.rs
workspace/server/src/queue/: message.rs  message_queues.rs  mod.rs
workspace/server/src/security/: jwt.rs  mod.rs  token.rs  util.rs
workspace/workflows/: Cargo.toml
workspace/workflows/src/: activity.rs  lib.rs  util.rs
(+2002 files in other folders)
