[package]
name = "bosca-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
ulid = "1.1.3"
parquet = "53.2.0"
arrow = "53.2.0"

axum = { version = "0.7.5", features = ["default", "tokio", "multipart", "tracing", "json", "form", "ws"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
tower-http = { version = "0.6.1", features = ["timeout"] }
http = "1.1.0"
tokio = { version = "1.38.1", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.11", features = ["with-uuid-0_8"] }
tokio-postgres-rustls = "0.12.0"
uuid = { version = "0.8.2", features = ["v5", "serde"] }
serde_json = "1.0.128"
serde = "1.0.210"
chrono = { version = "0.4.38", features = ["serde"] }
bytes = "1.7.1"
futures-util = "0.3.30"
tower = "0.5.1"
async-trait = "0.1.82"
base64 = "0.22.1"
argon2 = "0.5.3"
log = "0.4.22"
jsonwebtoken = "9.3.0"
tokio-stream = "0.1.16"
async-stream = "0.3.5"
structured-logger = "1.0.3"

reqwest = "0.12.8"
opentelemetry = { version = "0.26.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio", "trace"] }
opentelemetry-stdout = { version = "0.26.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.26.0", features = ["tracing", "trace", "metrics", "http", "http-json", "http-proto", "opentelemetry-http", "default", "reqwest"] }
opentelemetry-http = { version = "0.26.0", features = ["reqwest"] }
opentelemetry-semantic-conventions = "0.26.0"

headers = "0.4.0"
rustls = { version = "0.23.14", features = ["tls12", "ring"] }
webpki-roots = "0.26.6"

mimalloc = { version = "0.1.43", features = ["default"] }
rand = "0.8.5"
#console-subscriber = "0.4.0"