[package]
name = "bosca-client-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = "1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["stream", "multipart", "json"] }
tokio = { version = "1.38.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["default", "stream"] }
tokio-util = { version = "0.7.3", features = ["codec", "default"] }
async-trait = "0.1.82"
http = "1.1.0"
bytes = "1.7.2"
log = "0.4.22"
futures = "0.3.30"
uuid = { version = "1.11.0", features = ["v4"] }
sha2 = "0.10.8"
hex = "0.4.3"
regex = "1.11.1"
clap = { version = "4.5.23", features = ["derive"] }
