[package]
name = "bosca-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.210"
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["stream", "multipart", "json"] }
tokio = { version = "1.38.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["default", "stream"] }
tokio-util = { version = "0.7.3", features = ["codec", "default"] }
async-trait = "0.1.82"
graphql-ws-client = { version = "0.10.2", features = ["client-graphql-client", "tungstenite"] }
http = "1.1.0"
bytes = "1.7.2"
log = "0.4.22"
graphql_client = "0.14.0"
futures = "0.3.30"
uuid = { version = "1.11.0", features = ["v4"] }