[package]
name = "bosca-front"
version = "0.1.0"
edition = "2021"

#[target.'cfg(not(target_env = "msvc"))'.dependencies]
#tikv-jemallocator = "0.6"

[dependencies]
tera = "1"
swc_common = "0.40.1"
swc_html_codegen = "0.49.0"
swc_html_minifier = "0.150.0"
swc_html = "0.153.0"
swc_css_codegen = "0.158.0"
swc_css_minifier = "0.123.0"
swc_css = "0.165.0"
axum = { version = "0.7.5", features = ["default", "tokio", "multipart", "tracing", "json"] }
http = "1.1.0"
tokio = { version = "1.38.1", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.11", features = ["with-uuid-0_8"] }
uuid = { version = "0.8.2", features = ["v5", "serde"] }
serde_json = "1.0.128"
serde = "1.0.210"
chrono = { version = "0.4.38", features = ["serde"] }
bytes = "1.7.1"
futures-util = "0.3.30"
tower = "0.5.1"
async-trait = "0.1.82"
base64 = "0.22.1"
argon2 = "0.5.3"
log = "0.4.22"
jsonwebtoken = "9.3.0"
tokio-stream = "0.1.16"
async-stream = "0.3.5"
structured-logger = "1.0.3"
graphql-ws-client = { version = "0.10.2", features = ["client-graphql-client", "tungstenite"] }
graphql_client = "0.14.0"

bosca-telemetry = { path = "../util/telemetry" }
opentelemetry = { version = "0.25.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio", "trace"] }
opentelemetry-stdout = { version = "0.25.0", features = ["trace"] }
tokio-util = "0.7.12"

mimalloc = { version = "0.1.43", features = ["default"] }
