[package]
name = "bosca-migrations"
version = "0.1.0"
edition = "2021"

[dependencies]
deadpool-postgres = "0.14.0"
tokio = { version = "1.38.1", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.11", features = ["with-uuid-0_8"] }
tokio-postgres-rustls = "0.12.0"
uuid = { version = "0.8.2", features = ["v5", "serde"] }
serde_json = "1.0.128"
serde = "1.0.210"
postgres-types = { version = "0.2.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
bytes = "1.7.1"
futures-util = "0.3.30"
tower = "0.5.1"
async-trait = "0.1.82"
base64 = "0.22.1"
argon2 = "0.5.3"
log = "0.4.22"
tokio-stream = "0.1.16"
async-stream = "0.3.5"

rustls = { version = "0.23.14", features = ["tls12", "ring"] }
webpki-roots = "0.26.6"

refinery = { version = "0.8.14", features = ["tokio-postgres"] }

#console-subscriber = "0.4.0"