[package]
name = "bosca-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }
bosca-workflows = { path = "../workflows" }
bosca-client = { path = "../client" }
bosca-bible-workflows = { path = "../bible/workflows" }
structured-logger = "1.0.3"
log = "0.4.22"
futures = "0.3.30"
axum = { version = "0.7.5" }
mimalloc = { version = "0.1.43", features = ["default"] }
