[package]
name = "bosca-bible-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }
structured-logger = "1.0.3"
log = "0.4.22"
futures = "0.3.30"
async-trait = "0.1.82"
quick-xml = { version = "0.36.2", features = ["serialize"] }
zip = "2.2.0"
serde = { version = "1.0.210", features = ["derive"] }
xml_schema_generator = "0.6.14"
regex = "1.11.0"