[package]
name = "bosca-bible-workflows"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }
bosca-workflows = { path = "../../workflows" }
bosca-bible-processor = { path = "../processor" }
bosca-client = { path = "../../client" }
structured-logger = "1.0.3"
log = "0.4.22"
futures = "0.3.30"
async-trait = "0.1.82"
reqwest = "0.12.7"
serde_json = "1.0.128"
serde = "1.0.210"
uuid = { version = "1.10.0", features = ["v4"] }
bytes = "1.7.2"