[package]
name = "bosca-dc"
version = "0.1.0"
edition = "2021"
description = "Distributed Cache service for Bosca"

# Build dependencies are temporarily disabled to fix build issues
# [build-dependencies]
# tonic-build = "0.11.0"

[dependencies]
# Cluster management
# Temporarily removed raft dependency due to build issues
# Will implement a simplified cluster management for now

# In-memory cache
moka = { version = "0.12.10", features = ["future"] }  # Same version as in server

# Communication
axum = { version = "0.8.1", features = ["default", "tokio", "multipart", "tracing", "json", "form", "ws"] }
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
# Temporarily removed protobuf dependencies due to build issues
# prost = "0.12.3"  # Protocol Buffers support
# tonic = "0.11.0"  # gRPC framework that works with protobuf

# Async runtime
tokio = { version = "1.38.1", features = ["full", "tracing"] }
tokio-stream = "0.1.16"

# Utilities
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
async-trait = "0.1.82"
tracing = { version = "0.1.41", features = ["default"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
log = "0.4.22"
futures-util = "0.3.30"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["timeout", "cors"] }
async-stream = "0.3.5"
base64 = "0.22.1"
