[package]
name = "bosca-dc"
version = "0.1.0"
edition = "2021"
description = "Distributed Cache service for Bosca"

# Build dependencies are temporarily disabled to fix build issues
# [build-dependencies]
# tonic-build = "0.11.0"

[dependencies]
moka = { version = "0.12.10", features = ["future"] }  # Same version as in server
axum = { version = "0.8.3", features = ["default", "tokio", "multipart", "tracing", "json", "form", "ws"] }
tokio = { version = "1.38.1", features = ["full", "tracing"] }
tokio-stream = "0.1.16"
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
serde_bytes = "0.11"
serde_json = "1.0.140"
async-trait = "0.1.88"
tracing = { version = "0.1.41", features = ["default"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
log = "0.4.22"
futures-util = "0.3.30"
async-stream = "0.3.5"
base64 = "0.22.1"
