[package]
name = "bosca-migrations"
version = "0.1.0"
edition = "2021"

[dependencies]
bosca-database = { path = "../util/database" }

tokio = { version = "1.38.1", features = ["full", "tracing"] }
base64 = "0.22.1"
rustls = { version = "0.23.14", features = ["tls12", "ring"] }
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
