[package]
name = "bosca-server"
version = "0.5.0"
edition = "2021"

#[target.'cfg(not(target_env = "msvc"))'.dependencies]
#tikv-jemallocator = "0.6"

[dependencies]
async-graphql = { version = "7.0.15", features = ["chrono", "chrono-tz", "graphiql", "tokio", "unblock", "apollo_persisted_queries", "log", "tracing"] }
async-graphql-axum = "7.0.15"
axum = { version = "0.8.1", features = ["default", "tokio", "multipart", "tracing", "json", "form", "ws"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
tower-http = { version = "0.6.1", features = ["timeout", "cors"] }
deadpool-postgres = "0.14.0"
http = "1.2.0"
tokio = { version = "1.38.1", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.11", features = ["with-uuid-1"] }
uuid = { version = "1.15.1", features = ["v4", "v5", "serde"] }
yaml-rust2 = "0.10.0"
serde_json = "1.0.128"
serde = "1.0.210"
postgres-types = { version = "0.2.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
aes-gcm = { version = "0.10.3", features = ["getrandom"] }
bytes = "1.7.1"
futures-util = "0.3.30"
tower = "0.5.1"
async-trait = "0.1.82"
base64 = "0.22.1"
argon2 = "0.5.3"
log = "0.4.22"
jsonwebtoken = "9.3.0"
tokio-stream = "0.1.16"
object_store = { version = "0.12.0", features = ["aws"] }
redis = { version = "0.29.5", features = ["cluster", "cluster-async", "aio", "tokio-comp", "r2d2", "streams", "connection-manager", "uuid", "json"] }
bosca-database = { path = "../util/database" }
jsonschema = "0.29.0"
opentelemetry = { version = "0.29.1", features = ["default"] }
opentelemetry_sdk = { version = "0.29.0", features = ["default", "rt-tokio"] }
opentelemetry-otlp = { version = "0.29.0", features = ["tracing", "trace", "logs", "metrics", "http", "http-proto", "tokio", "opentelemetry-http", "default", "reqwest"] }
opentelemetry-semantic-conventions = "0.29.0"
tracing = { version = "0.1.41", features = ["default"] }
tracing-subscriber = "0.3.19"
tracing-opentelemetry = { version = "0.30.0", features = ["default", "async-trait"] }
axum-tracing-opentelemetry = "0.28.0"

oauth2 = { version = "5.0.0" }
time = { version = "0.3.41" }
url = "2.5.4"

meilisearch-sdk = "0.28.0"
rustls = { version = "0.23.23", features = ["tls12", "ring"] }

mimalloc = { version = "0.1.43", features = ["default"] }

hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.9.0"
rrule = "0.13.0"
moka = { version = "0.12.10", features = ["future"] }

bosca-dc-client = { path = "../dc-client" }
